Refactor webcam component to use consistent switchCamera observable

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     [height]="500"
     [trigger]="triggerObservable"
     [imageQuality]="1"
-    [switchCamera]="nextWebcamObservable"
+    [switchCamera]="switchCameraObservable"
     (imageCapture)="handleImage($event)"
     [allowCameraSwitch]="true"
   ></webcam>
