--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,27 +1,71 @@
 .container {
-  position: fixed;
-  inset: 0;
-  z-index: 99;
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+  overflow: hidden;
 
-  .webcam-wrapper {
+  .image-container {
     width: 100%;
     height: 100%;
 
-    video {
+    .image {
       width: 100%;
       height: 100%;
       object-fit: cover;
     }
   }
 
-  .controls {
-    position: absolute;
+  .webcam-container {
+    display: block;
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
     left: 0;
     right: 0;
-    bottom: 20px;
-    z-index: 100;
+    bottom: 0;
+    z-index: 9999;
+
+    .webcam {
+      display: block;
+      width: 100%;
+      height: 100%;
+
+      &-wrapper {
+        // display: block;
+        width: 100%;
+        height: 100%;
+
+        video {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+    }
+
+    .controls {
+      position: absolute;
+      bottom: 20px;
+      z-index: 100;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+
+  .button-container {
+    position: absolute;
+    z-index: 9999;
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+
+    .button {
+      background: #fff;
+    }
   }
 }
